# FlowLens

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: base.py  session.py
backend/app/models/: __init__.py  analysis_run.py  chat_message.py  document.py  mixins.py  project.py  user.py
backend/app/prompts/: __init__.py  executive_summary.py  opportunity_analysis.py  process_analysis.py  project_chat.py  roadmap.py
backend/app/repositories/: analysis_run_repository.py  base.py  chat_message_repository.py  document_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  chat.py  health.py  project.py
backend/app/services/: __init__.py  analysis_service.py  anthropic_messages.py  chat_service.py  document_extractor.py  document_service.py  project_service.py
backend/app/services/analysis/: __init__.py  claude_services.py  contracts.py  orchestrator.py
backend/app/services/auth/: __init__.py  oauth.py  passwords.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 20260715_0001_initial_schema.py  20260715_0002_documents_reports_chat.py
backend/tests/: test_analysis_orchestrator.py  test_document_extractor.py  test_health.py  test_security.py
(+63 files in other folders)
