[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "flowlens-api"
version = "0.1.0"
description = "FlowLens API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "email-validator>=2.2.0",
  "fastapi[standard]>=0.115.8",
  "anthropic>=0.80.0",
  "pwdlib[argon2]>=0.3.0",
  "pypdf>=6.0.0",
  "psycopg[binary]>=3.2.4",
  "pydantic-settings>=2.7.1",
  "pyjwt[crypto]>=2.10.1",
  "python-docx>=1.1.2",
  "sqlalchemy>=2.0.37",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true
